--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,4 +1,11 @@
-.button {
-    margin: 30px;
-    cursor: pointer;
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.nav {
+    display: grid;
+    grid-template-columns: repeat(4, 100px);
+    padding: 20px 0;
+    border-bottom: 1px solid #ccc;
 }
